--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/mfrachet/acodingdance/issues"
   },
   "dependencies": {
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-feed": "^2.0.8",
