--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: mfrachet/acodingdance
 
+publish_mode: editorial_workflow
 media_folder: static/assets
 public_folder: assets
 
