--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
+    "lodash": "^4.17.11",
     "netlify-cms-app": "^2.9.1",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
