--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/mfrachet/acodingdance/issues"
   },
   "dependencies": {
+    "antd": "^3.23.6",
     "disqus-react": "^1.0.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.22",
