--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/mfrachet/acodingdance/issues"
   },
   "dependencies": {
+    "antd": "^3.23.6",
     "disqus-react": "^1.0.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.22",
@@ -35,10 +36,8 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
     "typeface-montserrat": "^0.0.54",
-    "typeface-roboto": "^0.0.54",
-    "typography": "^0.16.17"
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
