--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "url": "https://github.com/mfrachet/acodingdance/issues"
   },
   "dependencies": {
-    "antd": "^3.23.6",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.22",
+    "gatsby-plugin-emotion": "^4.1.13",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.5",
@@ -35,8 +37,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "typeface-montserrat": "^0.0.54",
-    "typeface-roboto": "^0.0.54"
+    "typeface-source-sans-pro": "^0.0.75"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
