--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.8.0",
     "typeface-source-sans-pro": "^0.0.75"
   },
   "devDependencies": {
