--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.49",
     "gatsby-plugin-emotion": "^4.3.10",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-remark-images": "^3.3.26",
