--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "emotion-theming": "^10.0.27",
-    "gatsby": "^2.24.49",
-    "gatsby-plugin-emotion": "^4.3.10",
-    "gatsby-plugin-manifest": "^2.4.28",
-    "gatsby-plugin-offline": "^3.2.27",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "gatsby": "^2.29.0",
+    "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-google-analytics": "^2.3.14",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.28",
-    "gatsby-remark-copy-linked-files": "^2.3.14",
-    "gatsby-remark-images": "^3.3.26",
-    "gatsby-remark-prismjs": "^3.5.11",
-    "gatsby-source-filesystem": "^2.3.25",
-    "gatsby-transformer-remark": "^2.8.29",
-    "prismjs": "^1.21.0",
-    "react-dom": "^16.13.1",
+    "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sharp": "^2.11.0",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-images": "^3.8.0",
+    "gatsby-remark-prismjs": "^3.10.0",
+    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-transformer-remark": "^2.13.0",
+    "prismjs": "^1.22.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "scripts": {
