--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0"
   },
   "scripts": {
     "dev": "gatsby develop",
