--- a/package.json
+++ b/package.json
@@ -25,10 +25,18 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "deploy": "NODE_ENV=prod gatsby build && gh-pages -d public -b master"
+    "deploy": "NODE_ENV=prod gatsby build && gh-pages -d public -b master",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
     "gh-pages": "^3.1.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.0.2"
   }
 }
