--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-google-analytics": "^2.3.14",
     "gatsby-plugin-offline": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.11.0",
     "gatsby-remark-copy-linked-files": "^2.7.0",
     "gatsby-remark-images": "^3.8.0",
@@ -25,7 +26,8 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "deploy": "NODE_ENV=prod gatsby build && gh-pages -d public -b master",
+    "build": "NODE_ENV=prod gatsby build ",
+    "deploy": "yarn build && gh-pages -d public -b master",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "devDependencies": {
