--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "gatsby": "^2.29.0",
+    "gatsby-plugin-canonical-urls": "^2.7.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-google-analytics": "^2.3.14",
     "gatsby-plugin-react-helmet": "^3.7.0",
