--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy start --serve"
+    "start": "eleventy start --serve",
+    "deploy": "yarn build && gh-pages -d public -b master"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0",
-    "@quasibit/eleventy-plugin-sitemap": "^2.1.3"
+    "@quasibit/eleventy-plugin-sitemap": "^2.1.3",
+    "gh-pages": "^3.1.0"
   },
   "dependencies": {
     "clean-css": "^5.1.2",
